support for spark 4